apps/workloads/portfolio/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: portfolio-allowlist
  namespace: portfolio
spec:
  ipAllowList:
    sourceRange:
      - 192.168.10.0/24
      - 100.64.0.0/10
